# mystcl

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  build_wheels  deploy  setup.py  teek.patch  test
python_module/: setup.py
python_module/mystcl.egg-info/: PKG-INFO  SOURCES.txt
scripts/: build_wheels  deploy  test
src/: exceptions.rs  lib.rs  tclinterp.rs  tclobj.rs  tclsocket.rs  tkapp.rs  wrappers.rs
src/tclinterp/: channel.rs  createcommand.rs  preserve.rs
tcl-sys/: Cargo.toml  build.rs  wrapper.h
tclinterp/: Cargo.toml
tclinterp/src/: channel.rs  error.rs  exceptions.rs  interp.rs  lib.rs  obj.rs  postoffice.rs  tclinterp.rs  tclobj.rs  tclsocket.rs  wrappers.rs
tclinterp/src/interp/: createcommand.rs
tclinterp/src/tclinterp/: channel.rs  createcommand.rs
tclinterp/src/utils/: mod.rs  preserve.rs  socketpair.rs
tkapp/: Cargo.toml
tkapp/src/: lib.rs
