[package]
name = "mystcl"
version = "1.0.5"
authors = ["Purple Myst <PurpleMyst@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "mystcl"
crate-type = ["cdylib"]

[dependencies]
tcl-sys = { path = "./tcl-sys/" }
pyo3 = { version = "0.7.0-alpha.1" }
rand = "0.6.5"
log = "0.4.6"
env_logger = "0.6.1"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[build-dependencies]
bindgen = "0.49.0"
